// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "google.golang.org/grpc/examples/helloworld/helloworld";
option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

package helloworld;


message SumRequest{
  int32 num1 = 1;
  int32 num2 = 2;
}

message SumResponse{
  int32 result = 1;
}

message PNDRequest{
  int32 num = 1;
}

message PNDResponse{
  int32 result = 1;
}

message AverageRequest {
    float num = 1;
}

message AverageResponse {
    float result = 1;
}

message FindMaxRequest {
    int32 num = 1;
}

message FindMaxResponse {
    int32 max = 1;
}

message SquareRequest {
    int32 num = 1;
}

message SquareResponse {
    double result = 1;
}

service SumService{
  rpc Sum(SumRequest) returns (SumResponse){}
  rpc SumWithDeadline(SumRequest) returns (SumResponse){}
  rpc PND(PNDRequest) returns (stream PNDResponse){}
  rpc Average(stream AverageRequest) returns (AverageResponse) {}
  rpc FindMax(stream FindMaxRequest) returns (stream FindMaxResponse) {}
  rpc Square(SquareRequest) returns (SquareResponse) {}
}


// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
